force-app/main/default/objects/Job_Posting__c/fields/Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Date__c</fullName>
    <label>Availability Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>