force-app/main/default/objects/Job_Posting__c/fields/Job_Posting_Site__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Site__c</fullName>
    <label>Job_Posting_Site</label>
    <referenceTo>Job_Posting_Site__c</referenceTo>
    <relationshipLabel>Job_Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>