force-app/main/default/objects/Job_Posting__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job_Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>